# Computer-Othello

./: CMakeLists.txt  COMMIT_HISTORY.txt  LICENSE  README.md
src/: Bit.h  Const.h  Init.h  Util.cpp  Util.h  main.cpp
src/Engine/: Engine.cpp  Engine.h  Masks.h
src/Engine/Evaluation/: EvalBuilder.cpp  EvalBuilder.h  EvalBuilderDebug.cpp  Evaluation.cpp  Evaluation.h  LinearModel.h  MirrorFeature.cpp  StaticEvaluations.h  TernaryIndices.h
src/Engine/Search/: EndSearch.cpp  EndSearchLastN.cpp  Etc.cpp  MidSearch.cpp  MidSearchNWS.cpp  MoveOrdering.cpp  ProbCut.cpp  SearchStructs.h  TranspositionTable.cpp  TranspositionTable.h
src/GUI/: AiConfigWidget.cpp  AiConfigWidget.h  AiWorker.cpp  AiWorker.h  BoardWidget.cpp  BoardWidget.h  CellWidget.cpp  CellWidget.h  EvaluationWidget.cpp  EvaluationWidget.h  OthelloGui.cpp  OthelloGui.h  QtInclude.h  ScoreDiscWidget.cpp  ScoreDiscWidget.h  ScoreWidget.cpp  ScoreWidget.h  SidePanelWidget.cpp  SidePanelWidget.h
src/Game/: Board.cpp  Board.h  Game.cpp  Game.h  Move.cpp  Move.h
